# rust-fundamentals

./: Cargo.toml  LICENSE  README.md  setup_workspace.ps1  setup_workspace.sh
.github/workflows/: ci.yml
architecture/: workspace_setup.md
chapters/ch01_getting_started/: Cargo.toml
chapters/ch02_guessing_game/: Cargo.toml
chapters/ch03_common_concepts/: Cargo.toml
chapters/ch04_understanding_ownership/: Cargo.toml
chapters/ch05_using_structs/: Cargo.toml
chapters/ch06_enums_patterns/: Cargo.toml
chapters/ch07_managing_projects/: Cargo.toml
chapters/ch08_common_collections/: Cargo.toml
chapters/ch09_error_handling/: Cargo.toml
chapters/ch10_generics_traits_lifetimes/: Cargo.toml
chapters/ch11_writing_tests/: Cargo.toml
chapters/ch12_minigrep/: Cargo.toml
chapters/ch13_functional_features/: Cargo.toml
chapters/ch14_cargo_more/: Cargo.toml
chapters/ch15_smart_pointers/: Cargo.toml
chapters/ch16_fearless_concurrency/: Cargo.toml
chapters/ch17_oop_features/: Cargo.toml
chapters/ch18_patterns_matching/: Cargo.toml
docs/: ch01_getting_started.md  ch02_guessing_game.md  ch03_common_concepts.md  ch04_understanding_ownership.md  ch05_using_structs.md  ch06_enums_pattern_matching.md  ch07_managing_growing_projects.md  ch08_common_collections.md  ch09_error_handling.md  ch10_generics_traits_lifetimes.md  ch11_writing_tests.md  ch12_minigrep.md  ch13_functional_features.md  ch14_cargo_more.md  ch15_smart_pointers.md  ch16_fearless_concurrency.md  ch17_oop_features.md  ch18_patterns_matching.md  ch19_advanced_features.md  ch20_web_server.md
(+46 files in other folders)
